<resources>
    <string name="app_name">Two Activities</string>
    <string name="textview">TextView</string>
    <string name="two_activities">Two Activities</string>
    <string name="button1">Button</string>
    <string name="button_main">Send</string>
    <string name="activity2_name">Second Activity</string>
    <string name="text_header">Message Received</string>
    <string name="editText_main">Enter Your Message Here</string>
    <string name="button_second">Reply</string>
    <string name="edittext_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
</resources>