<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1EFF4"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="57dp"
        android:layout_marginEnd="53dp"
        android:layout_marginStart="200dp"
        android:background="#C6C2C2"
        android:onClick="launchSecondActivity"
        android:text="@string/button_main"
        android:textColor="#F4EFEF"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="951dp"
        android:layout_height="129dp"
        android:background="#8257CF"
        android:text="@string/two_activities"
        android:textAlignment="center"
        android:textColor="#FDFAFA"
        android:textSize="50sp"
        android:visibility="invisible"
        android:layout_centerVertical="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <!--Two TextView Copied from activity_second-->

    <EditText
        android:id="@+id/editText_main"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="55dp"
        android:layout_marginEnd="-144dp"
        android:layout_marginRight="-144dp"
        android:layout_toLeftOf="@+id/button_main"
        android:layout_toStartOf="@+id/button_main"
        android:hint="@string/editText_main" />

    <TextView
        android:id="@+id/text_header_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/text_header_reply"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_message_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_header_reply"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible"
        />

</RelativeLayout>